--- a/split_sim-recon/example/gluex_recon/src/programs/SConscript
+++ b/split_sim-recon/example/gluex_recon/src/programs/SConscript
@@ -5,6 +5,6 @@ Import('*')
 
 Import('env osname')
 
-subdirs = ['Simulation', 'AmplitudeAnalysis']
+subdirs = ['Analysis', 'Utilities']
 SConscript(dirs=subdirs, exports='env osname', duplicate=0)
 
