--- a/split_sim-recon/example/gluex_recon/src/plugins/Analysis/fcal_charged/MakeEigensystem/SConstruct
+++ b/split_sim-recon/example/gluex_recon/src/plugins/Analysis/fcal_charged/MakeEigensystem/SConstruct
@@ -5,13 +5,13 @@ import sys
 import subprocess
 import glob
 
-# Get GLUEX_RECON_HOME environment variable, verifying it is set
-halld_home = os.getenv('GLUEX_RECON_HOME')
+# Get HALLD_RECON_HOME environment variable, verifying it is set
+halld_home = os.getenv('HALLD_RECON_HOME')
 if(halld_home == None):
-        print 'GLUEX_RECON_HOME environment variable not set!'
+        print 'HALLD_RECON_HOME environment variable not set!'
         exit(-1)
 
-# Get HALLD_MY if it exists. Otherwise use GLUEX_RECON_HOME
+# Get HALLD_MY if it exists. Otherwise use HALLD_RECON_HOME
 halld_my = os.getenv('HALLD_MY', halld_home)
 
 # Get plugin name
@@ -40,7 +40,7 @@ bin = "%s/bin" % (plugininstalldir)
 lib = "%s/lib" % (plugininstalldir)
 plugins = "%s/%s/plugins" % (plugininstalldir,osname)
 env = Environment(    CPPPATH = [include],
-                      LIBPATH = ["%s/%s/lib" %(halld_home, osname)],  # n.b. add GLUEX_RECON_HOME here and prepend HALLD_MY below
+                      LIBPATH = ["%s/%s/lib" %(halld_home, osname)],  # n.b. add HALLD_RECON_HOME here and prepend HALLD_MY below
                   variant_dir = ".%s" % (osname))
 
 # Only add HALLD_MY library search path if it already exists
@@ -75,7 +75,7 @@ env.Replace( CXX = os.getenv('CXX', 'g++'),
              CC  = os.getenv('CC' , 'gcc'),
              FC  = os.getenv('FC' , 'gfortran') )
 
-# Add local directory, directories from HALLD_MY and GLUEX_RECON_HOME to include search path
+# Add local directory, directories from HALLD_MY and HALLD_RECON_HOME to include search path
 #env.PrependUnique(CPPPATH = ['#'])
 env.PrependUnique(CPPPATH = ['%s/src' % halld_my, '%s/src/libraries' % halld_my, '%s/src/libraries/include' % halld_my])
 env.PrependUnique(CPPPATH = ['%s/src' % halld_home, '%s/src/libraries' % halld_home, '%s/src/libraries/include' % halld_home])
