Change Makefile to user halld_recon and halld_sim. Remove reference to "external" packages as part of halld_sim.

--- a/split_sim-recon/Makefile
+++ b/split_sim-recon/Makefile
@@ -1,7 +1,7 @@
 EXAMPLE_SPLIT_DIR = $(HD_UTILITIES_HOME)/split_sim-recon/example
-SIM_REPO_DIR = gluex_sim
-RECON_REPO_DIR = gluex_recon
 PWD=`pwd`
+SIM_REPO_DIR = $(PWD)/halld_sim
+RECON_REPO_DIR = $(PWD)/halld_recon
 SETUP_GLUEX = source $(BUILD_SCRIPTS)/gluex_env_jlab.sh ; unset HALLD_HOME
 DIRECTORIES_TO_BE_MOVED = src/programs/Simulation \
 	src/programs/AmplitudeAnalysis src/plugins/Simulation \
@@ -18,23 +18,23 @@ no_build: .recon_push_done .sim_push_done
 
 .recon_bare_push_done: .sim-recon_clone_done
 	cd sim-recon.git ; \
-	    git push --mirror git@github.com:jeffersonlab/gluex_recon.git
+	    git push --mirror git@github.com:jeffersonlab/halld_recon.git
 	date > $@
 
 .recon_clone_done: .recon_bare_push_done
 	rm -rf $(RECON_REPO_DIR)
-	git clone ssh://git@github.com/jeffersonlab/gluex_recon
+	git clone ssh://git@github.com/jeffersonlab/halld_recon
 	date > $@
 
 .recon_modify_done: .recon_clone_done
-	cp -r $(EXAMPLE_SPLIT_DIR)/gluex_recon/src gluex_recon
+	cp -r $(EXAMPLE_SPLIT_DIR)/halld_recon/src halld_recon
 	cd $(RECON_REPO_DIR) ; git rm -rq $(DIRECTORIES_TO_BE_MOVED)
 	date > $@
 
 .recon_commit_done: .recon_modify_done
 	cd $(RECON_REPO_DIR) ; git add .
 	cd $(RECON_REPO_DIR) ; \
-	    git commit -q -m "gluex_sim modified from sim-recon original"
+	    git commit -q -m "halld_sim modified from sim-recon original"
 	date > $@
 
 .recon_push_done: .recon_commit_done
@@ -57,7 +57,7 @@ no_build: .recon_push_done .sim_push_done
 	date > $@
 
 .sim_copy_done: .sim_filter_done
-	cp -rv $(EXAMPLE_SPLIT_DIR)/gluex_sim/src $(SIM_REPO_DIR)
+	cp -rv $(EXAMPLE_SPLIT_DIR)/halld_sim/src $(SIM_REPO_DIR)
 	date > $@
 
 .sim_commit_done: .sim_copy_done
@@ -68,14 +68,17 @@ no_build: .recon_push_done .sim_push_done
 
 .sim_push_done: .sim_commit_done
 	cd $(SIM_REPO_DIR) ; \
-	    git push --mirror git@github.com:jeffersonlab/gluex_sim.git
+	    git push --mirror git@github.com:jeffersonlab/halld_sim.git
 	date > $@
 
 .sim_scons_done: .sim_push_done .recon_scons_done
-	$(SETUP_GLUEX) ; export GLUEX_RECON=$(RECON_REPO_DIR) \
+	$(SETUP_GLUEX) ; \
+	    export HALLD_RECON_HOME=$(RECON_REPO_DIR) ; \
+	    export HALLD_SIM_HOME=$(SIM_REPO_DIR) ; \
 	    cd $(SIM_REPO_DIR)/src ; \
-	    scons install -j3
+	    scons install SHOWBUILD=1
+#	    scons install -j3
 	date > $@
 
 clean:
-	rm -rf gluex_sim gluex_recon sim-recon.git .*_done
+	rm -rf halld_sim halld_recon sim-recon.git .*_done
