--- a/launch/jana_offmon.config
+++ b/launch/jana_offmon.config
@@ -1,12 +1,13 @@
-PLUGINS janadot,occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_TDC_Timing,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,coherent_peak_skim,CDC_TimeToDistance,evio_writer,omega_skim
+PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,TAGM_TW,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,BCAL_TDC_Timing,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_Tresolution,CDC_expert_2,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,CDC_TimeToDistance,TOF_calib,CDC_amp,BCAL_attenlength_gainratio,evio_writer,trigger_skims,omega_skim,coherent_peak_skim,trackeff_missing,TPOL_tree,randomtrigger_skim
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
 
-REST:DATAVERSIONSTRING offmon_RunPeriod-2017-01_ver18
-JANA_CALIB_CONTEXT calibtime=2017-06-19-14-18-00   #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING offmon_RunPeriod-2017-01_ver38
+JANA_CALIB_CONTEXT calibtime=2018-07-27-17-14-00   #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
 #Fail job if input file is truncated (default 0)
 EVIO:TREAT_TRUNCATED_AS_ERROR 1
+
