Changes for offmon_2018-01_ver18
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@23486 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jana_offmon_nersc.config
+++ b/launch/jana_offmon_nersc.config
@@ -1,10 +1,17 @@
-PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,TAGM_TW,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,BCAL_TDC_Timing,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_Tresolution,CDC_expert_2,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,CDC_TimeToDistance,TOF_calib,CDC_amp,BCAL_attenlength_gainratio,evio_writer,trigger_skims,omega_skim,coherent_peak_skim,trackeff_missing,TPOL_tree,randomtrigger_skim
+
+# This was used for the 2018-01 ver 18 offmon launch
+# It does not include most skim files
+PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,TAGM_TW,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,BCAL_TDC_Timing,FCAL_Hadronic_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_Tresolution,CDC_expert_2,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,CDC_TimeToDistance,TOF_calib,CDC_amp,CDC_dedx,BCAL_attenlength_gainratio,trackeff_missing,TPOL_tree
+
+# This was used for the 2018-01 ver 17 offmon launch
+#PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,TAGM_TW,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,BCAL_TDC_Timing,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_Tresolution,CDC_expert_2,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,CDC_TimeToDistance,TOF_calib,CDC_amp,BCAL_attenlength_gainratio,evio_writer,trigger_skims,omega_skim,coherent_peak_skim,trackeff_missing,TPOL_tree,randomtrigger_skim
+
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS Ncores
 
-REST:DATAVERSIONSTRING offmon_RunPeriod-2018-01_verN00
-JANA_CALIB_CONTEXT calibtime=2018-08-13-00-00-00   #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING offmon_RunPeriod-2018-01_ver18
+JANA_CALIB_CONTEXT calibtime=2018-10-14-12-00-00   #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
