--- a/launch/jana_offmon_nersc.config
+++ b/launch/jana_offmon_nersc.config
@@ -1,4 +1,9 @@
 
+# This was used for the 2018-01 ver 19 offmon launch. These top 4
+# comment lines were added after the launch was completed. 
+# NOTE: The REST:DATAVERSIONSTRING value was accidentally left
+# as "ver18" during the launch. It is left that way here as well.
+
 # This was used for the 2018-01 ver 18 offmon launch
 # It does not include most skim files
 PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,TAGM_TW,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,BCAL_TDC_Timing,FCAL_Hadronic_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_Tresolution,CDC_expert_2,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,CDC_TimeToDistance,TOF_calib,CDC_amp,CDC_dedx,BCAL_attenlength_gainratio,trackeff_missing,TPOL_tree
