Some modifications in preparation for first recon launch at NERSC. File list has not been reviewed and bcalpi0skim file definitely still needs to be added.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@23717 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jana_recon_nersc.config
+++ b/launch/jana_recon_nersc.config
@@ -1,12 +1,12 @@
-PLUGINS danarest,monitoring_hists,occupancy_online,EPICS_dump,TS_scaler,TRIG_online,L1_online,PSPair_online,BCAL_inv_mass,FCAL_invmass,BCAL_Hadronic_Eff,BCAL_Eff,CDC_Efficiency,CDC_TimeToDistance,TrackingPulls,FCAL_Hadronic_Eff,FDC_Efficiency,SC_Eff,TOF_Eff,trackeff_missing,evio_writer,p2pi_hists,p3pi_hists,ppi0gamma_hists,coherent_peak_skim,PS_flux,omega_skim,exclusivepi0skim,cal_high_energy_skim
+# This was used for the 2018-01 ver 01 recon launch.
 
-#PLUGINS danarest,monitoring_hists
+PLUGINS danarest,monitoring_hists,occupancy_online,EPICS_dump,TS_scaler,TRIG_online,L1_online,PSPair_online,BCAL_inv_mass,FCAL_invmass,BCAL_Hadronic_Eff,BCAL_Eff,CDC_Efficiency,CDC_TimeToDistance,TrackingPulls,FCAL_Hadronic_Eff,FDC_Efficiency,SC_Eff,TOF_Eff,trackeff_missing,evio_writer,p2pi_hists,p3pi_hists,ppi0gamma_hists,coherent_peak_skim,PS_flux,omega_skim,randomtrigger_skim,TPOL_tree,pi0bcalskim
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS Ncores
 
-REST:DATAVERSIONSTRING recon_RunPeriod-2018-01_verXX
-JANA_CALIB_CONTEXT variation=default calibtime=2018-07-24-00-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING recon_RunPeriod-2018-01_ver01
+JANA_CALIB_CONTEXT variation=default calibtime=2018-12-22-00-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
