update to run number 60000

--- a/dirc/mcwrapper/bggen.config
+++ b/dirc/mcwrapper/bggen.config
@@ -5,7 +5,7 @@
 
 VARIATION=mc #set your jana calib context here with or without calibtime Default is variation=mc
 
-DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver08/bggen/
+DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver10/bggen/
 
 NCORES=1      # Number of CPU threads to use or nodes:node-id:ppn or nodes:ppn depending on your system
 
@@ -21,6 +21,8 @@ GEN_MAX_ENERGY=11.6
 
 GEANT_VERSION=4
 BKG=None #BeamPhotons:1.47 #[None, BeamPhotons, TagOnly, custom e.g bg.hddm:1.8] Can be stacked eg Random+TagOnly:.123 where the :[num] defines BGRATE
+
+CUSTOM_PLUGINS=file:/work/halld2/home/jrsteven/2018-dirc/builds/hd_utilities/dirc/mcwrapper/jana.conf
 
 #====================================================================================
 #EVERYTHING BELOW FOR BATCH ONLY
@@ -38,7 +40,7 @@ TRACK= simulation     	   # https://scicomp.jlab.org/docs/batch_job_tracks
 
 # RESOURCES for swif jobs
 DISK=5GB            # Max Disk usage
-RAM=2GB            # Max RAM usage
+RAM=4GB            # Max RAM usage
 TIMELIMIT=1200minutes      # Max walltime.  This may be of the form xx:xx:xx depending on your system
 OS=centos7        # Specify CentOS65 machines
 
