--- a/dirc/mcwrapper/particle_gun.config
+++ b/dirc/mcwrapper/particle_gun.config
@@ -5,12 +5,12 @@
 
 VARIATION=mc #set your jana calib context here with or without calibtime Default is variation=mc
 
-DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver08/kp_p4_theta4/ #_BeamPhoton300nA/
+DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver10/ #_BeamPhoton300nA/
 
 NCORES=1      # Number of CPU threads to use or nodes:node-id:ppn or nodes:ppn depending on your system
 
 GENERATOR=particle_gun #or you may specifile file:/.../file-to-use.hddm
-GENERATOR_CONFIG=/work/halld2/home/jrsteven/2018-dirc/dirc/mcwrapper/particle_gun/kp_p4_theta4.cfg
+GENERATOR_CONFIG=/work/halld2/home/jrsteven/2018-dirc/dirc/mcwrapper/particle_gun/pip_p4_theta4.cfg
 
 #common parameters for generators
 FLUX_TO_GEN=cobrems
@@ -22,6 +22,8 @@ GEN_MAX_ENERGY=11.6
 
 GEANT_VERSION=4
 BKG=None #BeamPhotons:1.47 #[None, BeamPhotons, TagOnly, custom e.g bg.hddm:1.8] Can be stacked eg Random+TagOnly:.123 where the :[num] defines BGRATE
+
+CUSTOM_PLUGINS=file:/work/halld2/home/jrsteven/2018-dirc/builds/hd_utilities/dirc/mcwrapper/jana.conf
 
 #====================================================================================
 #EVERYTHING BELOW FOR BATCH ONLY
@@ -39,7 +41,7 @@ TRACK= simulation     	   # https://scicomp.jlab.org/docs/batch_job_tracks
 
 # RESOURCES for swif jobs
 DISK=5GB            # Max Disk usage
-RAM=2GB            # Max RAM usage
+RAM=4GB            # Max RAM usage
 TIMELIMIT=600minutes      # Max walltime.  This may be of the form xx:xx:xx depending on your system
 OS=centos7        # Specify CentOS65 machines
 
