--- a/launch/jana_recon_nersc.config
+++ b/launch/jana_recon_nersc.config
@@ -5,8 +5,10 @@ PLUGINS danarest,monitoring_hists,occupancy_online,EPICS_dump,TS_scaler,TRIG_onl
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS Ncores
 
-REST:DATAVERSIONSTRING recon_RunPeriod-2018-01_ver01
-JANA_CALIB_CONTEXT variation=default calibtime=2019-01-31-12-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+THREAD_TIMEOUT 300
+
+REST:DATAVERSIONSTRING recon_RunPeriod-2018-01_ver02
+JANA_CALIB_CONTEXT variation=default calibtime=2019-02-14-12-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
