--- a/launch/jana_recon_nersc_test.config
+++ b/launch/jana_recon_nersc_test.config
@@ -1,8 +1,8 @@
-# This was used for the 2018-01 ver 01 recon launch.
+# This is used for test jobs at NERSC
 
 PLUGINS danarest,monitoring_hists,occupancy_online,EPICS_dump,TS_scaler,TRIG_online,L1_online,PSPair_online,BCAL_inv_mass,FCAL_invmass,BCAL_Hadronic_Eff,BCAL_Eff,CDC_Efficiency,CDC_TimeToDistance,TrackingPulls,FCAL_Hadronic_Eff,FDC_Efficiency,SC_Eff,TOF_Eff,trackeff_missing,evio_writer,p2pi_hists,p3pi_hists,ppi0gamma_hists,coherent_peak_skim,PS_flux,omega_skim,randomtrigger_skim,TPOL_tree,pi0bcalskim,janarate
 
-EVENTS_TO_KEEP 22000
+EVENTS_TO_KEEP 1000
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS Ncores
