updates to mcwrapper config files

--- a/dirc/mcwrapper/bggen.config
+++ b/dirc/mcwrapper/bggen.config
@@ -5,7 +5,9 @@
 
 VARIATION=mc #set your jana calib context here with or without calibtime Default is variation=mc
 
-DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver10/bggen/
+RCDB_QUERY=beam_current>25 and event_count>5e5
+CCDBSQLITEPATH=/work/halld2/home/jrsteven/2018-dirc/dirc/tables/ccdb.sqlite
+DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver15/bggen/
 
 NCORES=1      # Number of CPU threads to use or nodes:node-id:ppn or nodes:ppn depending on your system
 
@@ -20,7 +22,7 @@ GEN_MIN_ENERGY=3.0
 GEN_MAX_ENERGY=11.6
 
 GEANT_VERSION=4
-BKG=None #BeamPhotons:1.47 #[None, BeamPhotons, TagOnly, custom e.g bg.hddm:1.8] Can be stacked eg Random+TagOnly:.123 where the :[num] defines BGRATE
+BKG=loc:/volatile/halld/home/jrsteven/2018-dirc/random_triggers/dircmon-2019_01-ver08/
 
 CUSTOM_PLUGINS=file:/work/halld2/home/jrsteven/2018-dirc/builds/hd_utilities/dirc/mcwrapper/jana.conf
 
