--- a/dirc/mcwrapper/gen_2k.config
+++ b/dirc/mcwrapper/gen_2k.config
@@ -5,7 +5,9 @@
 
 VARIATION=mc #set your jana calib context here with or without calibtime Default is variation=mc
 
-DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver10/gen_2k/ #_BeamPhoton300nA/
+RCDB_QUERY=beam_current > 25 and event_count>5e5
+CCDBSQLITEPATH=/work/halld2/home/jrsteven/2018-dirc/dirc/tables/ccdb.sqlite
+DATA_OUTPUT_BASE_DIR=/volatile/halld/home/jrsteven/2018-dirc/dircsim-2019_01-ver02/gen_2k/ #_BeamPhoton300nA/
 
 NCORES=1      # Number of CPU threads to use or nodes:node-id:ppn or nodes:ppn depending on your system
 
@@ -21,7 +23,7 @@ GEN_MIN_ENERGY=3.0
 GEN_MAX_ENERGY=11.6
 
 GEANT_VERSION=4
-BKG=None #BeamPhotons:1.47 #[None, BeamPhotons, TagOnly, custom e.g bg.hddm:1.8] Can be stacked eg Random+TagOnly:.123 where the :[num] defines BGRATE
+BKG=loc:/cache/halld/gluex_simulations/random_triggers/recon-2019_01-ver01/
 
 CUSTOM_PLUGINS=file:/work/halld2/home/jrsteven/2018-dirc/builds/hd_utilities/dirc/mcwrapper/jana.conf
 
