--- a/dirc/mcwrapper/jana_single.conf
+++ b/dirc/mcwrapper/jana_single.conf
@@ -1,6 +1,6 @@
 JANA:MAX_RELAUNCH_THREADS 10
-REST:WRITE_DIRC_HITS 1
 TRIG:BYPASS 1
-PLUGINS monitoring_hists,danarest,truth_dirc
+NTHREADS 8
+PLUGINS dirc_hists,truth_dirc
 JANA_CALIB_CONTEXT "variation=mc"
 DIRC:DEBUG_HISTS 0
