updated jana config for incoming monitoring in 2019-11
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@24513 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/incoming/jana_incoming.config
+++ b/incoming/jana_incoming.config
@@ -1,14 +1,27 @@
-PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LED,L1_online,FCAL_invmass,pedestal_online,TAGM_online,lowlevel_online
-#,BCAL_attenlength_gainratio, janadot,
+PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_clusters,TAGM_TW,BCAL_online,FCAL_online,CCAL_online,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,RF_online,L1_online,FCAL_invmass,pedestal_online,TAGM_online,lowlevel_online,BCAL_TDC_Timing,BCAL_attenlength_gainratio,CDC_online,CDC_Efficiency,CDC_drift,CDC_expert_2,CDC_amp,CDC_roc_hits,FDC_online,FDC_Efficiency,DIRC_online,BCAL_LED,ST_online_lowlevel,ST_online_tracking,ST_online_Tresolution,TRD_online,TRD_hists
+
+#,ST_online_efficiency
+
+#TAGMHit:DELTA_T_ADC_TDC_MAX 50
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
-NTHREADS 24
+NTHREADS 128
 
 #EVENTS_TO_KEEP 100000
 
-REST:DATAVERSIONSTRING offmon_RunPeriod-2018-01_ver01
+REST:DATAVERSIONSTRING offmon_RunPeriod-2019-11_ver01
 JANA_CALIB_CONTEXT variation=default
 
+# For DIRC in Spring 2019
+#RF_CALIB:SOURCE_SYSTEM PSC
+#RF:SOURCE_SYSTEM PSC
+
+# For PrimEx
+#HLDETECTORTIMING:NO_TRACKS 1
+
 #Fail job if input file is truncated (default 0)
-#EVIO:TREAT_TRUNCATED_AS_ERROR 1
+EVIO:TREAT_TRUNCATED_AS_ERROR 1
+
+#Some raw mode runs need this:
+#EVIO:F250_EMULATION_MODE 0 
 
