--- a/launch/jana_recon_nersc.config
+++ b/launch/jana_recon_nersc.config
@@ -7,8 +7,8 @@ NTHREADS Ncores
 
 THREAD_TIMEOUT 600
 
-REST:DATAVERSIONSTRING recon_RunPeriod-2018-08_ver02
-JANA_CALIB_CONTEXT variation=default calibtime=2019-07-21-12-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING 4.15.0
+JANA_CALIB_CONTEXT variation=default calibtime=2020-05-21-12-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
