Update job config examples to work with swif2, add additional config checking to python scripts

--- a/launch_scripts/launch/jobs_test.config
+++ b/launch_scripts/launch/jobs_test.config
@@ -6,9 +6,9 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         debug #reconstruction        # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos7
+PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
+TRACK                         debug              # https://scicomp.jlab.org/docs/batch_job_tracks
+OS                            general
 
 # JOB RESOURCES
 NCORES                        12
