typo in swif2 output fixed, automatic retry of jobs

--- a/launch_scripts/merge_trees/jobs_merge.config
+++ b/launch_scripts/merge_trees/jobs_merge.config
@@ -27,7 +27,7 @@ SCRIPTFILE                    /home/gxproj1/monitoring/merge_trees/script.sh
 CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]/
+INDATA_TOPDIR     /volatile/halld/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]/
 
 OUTDIR_LARGE      /cache/halld/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]/
 OUTDIR_SMALL      /work/halld2/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]/                  # log files
