--- a/PWA_scripts/AmpTools_Configs/fit_etapi0_combined_loops_massDepBW_TEMPLATE.cfg
+++ b/PWA_scripts/AmpTools_Configs/fit_etapi0_combined_loops_massDepBW_TEMPLATE.cfg
@@ -72,6 +72,9 @@ define pione 1.564 0.492
 define atwo1700 [a21700_m] [a21700_w]
 
 parameter parScale00 1.0 fixed
+parameter parScale45 1.0
+parameter parScale90 1.0
+parameter parScale135 1.0
                                                                                                                                                                                                                                                                                         
 
 #####################################
