updated best practices for DSelector analysis script

--- a/launch_scripts/root_analysis/jobs_root_analysis.config
+++ b/launch_scripts/root_analysis/jobs_root_analysis.config
@@ -6,33 +6,34 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         analysis              # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos7
+USER			      YOUR_USER_NAME	    # ADD YOUR USER NAME HERE
+PROJECT                       halld                 # = account: https://scicomp.jlab.org/scicomp/slurmJob/slurmAccount
+TRACK                         production            # = partition: https://scicomp.jlab.org/scicomp/slurmJob/slurmInfo
+OS                            general
 
 # JOB RESOURCES
-NCORES                        1
+NCORES                        12
 DISK                          50GB
-RAM                           2GB
-TIMELIMIT                     1hrs
+RAM                           10GB
+TIMELIMIT                     4hrs
 
 # WORKFLOW DEFINITION
-WORKFLOW                      analysis_2016-02_kmkp_ver01                           # MUST start with a letter!
+WORKFLOW                      analysis_2017-01_ver46                           # MUST start with a letter!
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /home/pmatt/env_gluex_analysis.sh
-SCRIPTFILE                    /home/pmatt/builds/scripts/monitoring/root_analysis/script.sh
-#CACHE_PIN_DAYS               21                                                                           # max is 60, 0 or comment-out for none
+ENVFILE                       /home/[USER]/env_gluex_analysis.sh
+SCRIPTFILE                    /home/[USER]/launch_scripts/root_analysis/script.sh
+#CACHE_PIN_DAYS               21	                                        # max is 60, 0 or comment-out for none
 
 # ROOT CONFIG
-ROOT_SCRIPT                   /home/pmatt/builds/scripts/monitoring/root_analysis/Run_Selector.C
-TREE_NAME                     kmkp_Tree
-SELECTOR_NAME                 /home/pmatt/builds/home/analysis/pmatt/selectors_analysis/DSelector_2kp      # Leave .C off of the end!
+ROOT_SCRIPT                   /home/[USER]/launch_scripts/root_analysis/Run_Selector.C
+TREE_NAME                     pippim__B4_Tree
+SELECTOR_NAME                 /home/[USER]/DSelector/DSelector_rho      # Leave .C off of the end!
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /cache/halld/home/pmatt/analysis_spring2016/ver05/tree_kmkp/
+INDATA_TOPDIR		      /cache/halld/RunPeriod-2017-01/analysis/ver46/tree_pippim__B4/merged/
 
 # FILE OUTPUT
-OUTDIR_LARGE      /volatile/halld/home/pmatt/analysis/kmkp_ver01/     # REST, hist
-OUTDIR_SMALL      /volatile/halld/home/pmatt/analysis/kmkp_ver01/    # log
+OUTDIR_LARGE      /volatile/halld/home/[USER]/analysis/pippim_ver46/     # root trees, hist
+OUTDIR_SMALL      /farm_out/[USER]/analysis/pippim_ver46/      # log
 
