--- a/launch_scripts/launch/jobs_analysis.config
+++ b/launch_scripts/launch/jobs_analysis.config
@@ -6,8 +6,9 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         production              # https://scicomp.jlab.org/docs/batch_job_tracks
+USER			      YOUR_USER_NAME	    # ADD YOUR USER NAME HERE
+PROJECT                       halld                 # = account: https://scicomp.jlab.org/scicomp/slurmJob/slurmAccount
+TRACK                         production            # = partition: https://scicomp.jlab.org/scicomp/slurmJob/slurmInfo
 OS                            general
 
 # JOB RESOURCES
@@ -24,17 +25,16 @@ BATCH                         01
 WORKFLOW                      analysis_[RUNPERIOD]_ver[VERSION] #_batch[BATCH]
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /home/gxproj1/env_monitoring_launch.sh
-SCRIPTFILE                    /home/gxproj1/monitoring/launch/script.sh
+ENVFILE                       /home/[USER]/env_monitoring_launch.sh
+SCRIPTFILE                    /home/[USER]/launch_scripts/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
-JANA_CONFIG                   /home/gxproj1/monitoring/launch/jana_analysis.config
+JANA_CONFIG                   /home/[USER]/launch_scripts/launch/jana_analysis.config
 CACHE_PIN_DAYS                0                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/recon/ver01/REST/
+INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/recon/ver04/REST/
 
 # FOR FULL RECON LAUNCHES
-#OUTDIR_LARGE      /cache/halld/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]                  # REST, skims, hists, trees
-OUTDIR_LARGE      /work/halld/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]                  # REST, skims, hists, trees
-OUTDIR_SMALL      /work/halld2/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]                  # log files, IDXA
+OUTDIR_LARGE      /volatile/halld/home/[USER]/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]                  # REST, skims, hists, trees
+OUTDIR_SMALL      /farm_out/[USER]/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]                  # log files, IDXA
 
