status on group disk before moving to el9 node

--- a/launch_scripts/recon_test/jobs_recon_test.config
+++ b/launch_scripts/recon_test/jobs_recon_test.config
@@ -6,9 +6,9 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         reconstruction        # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos77
+PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
+TRACK                         production            # https://scicomp.jlab.org/docs/batch_job_tracks
+OS                            el9
 
 # JOB RESOURCES
 NCORES                        24
