switched OS from general to el9

--- a/launch_scripts/launch/jobs_recon.config
+++ b/launch_scripts/launch/jobs_recon.config
@@ -1,4 +1,4 @@
-0;136;0c# Key/value pairs are separated by white space
+# Key/value pairs are separated by white space
 # Lines starting with # and empty lines are ignored
 # Only the first two values are evaluated, so for lines like:
 #     KEYVALUE VALUE1 VALUE2
@@ -8,7 +8,7 @@
 # SCICOMP JOB ACCOUNTING
 PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
 TRACK                         production              # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            general
+OS                            el9
 
 # JOB RESOURCES
 NCORES                        24
