current version of official merge scripts

--- a/launch_scripts/merge_trees/jobs_merge.config
+++ b/launch_scripts/merge_trees/jobs_merge.config
@@ -6,25 +6,25 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       halld                # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         production           # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            general
+PROJECT                       halld-pro             # http://scicomp.jlab.org/scicomp/#/projects
+TRACK                         production            # https://scicomp.jlab.org/docs/batch_job_tracks
+OS                            el9
 
 # JOB RESOURCES
 NCORES                        1
-DISK                          500GB
-RAM                           8GB
-TIMELIMIT                     8hrs
+DISK                          1000GB
+RAM                           4GB
+TIMELIMIT                     16hrs
 
-RUNPERIOD                     2017-01
-VERSION                       01
-BATCH			      01
+RUNPERIOD                     2018-01
+VERSION                       24
+BATCH			      04
 WORKFLOW                      analysis_[RUNPERIOD]_ver[VERSION]_batch[BATCH] # Input workflow
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /home/gxproj1/env_monitoring_launch.sh
-SCRIPTFILE                    /home/gxproj1/monitoring/merge_trees/script.sh
-CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
+ENVFILE                       /home/gxproj6/env_analysis_launch.sh
+SCRIPTFILE                    /home/gxproj6/hd_utilities/launch_scripts/merge_trees/script.sh
+CACHE_PIN_DAYS                0                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
 INDATA_TOPDIR     /volatile/halld/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]/
