removed traces of cache pin in config files and updated comments

--- a/launch_scripts/launch/jobs_test.config
+++ b/launch_scripts/launch/jobs_test.config
@@ -6,8 +6,8 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         debug              # https://scicomp.jlab.org/docs/batch_job_tracks
+PROJECT                       halld                  # https://scicomp.jlab.org/scicomp/slurmJob/slurmAccount
+TRACK                         scavenger              # https://scicomp.jlab.org/scicomp/slurmJob/slurmInfo
 OS                            el9
 
 # JOB RESOURCES
@@ -28,7 +28,6 @@ ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
 SCRIPTFILE                    /home/gxproj5/monitoring/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
 JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_test.config
-CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
 INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
