--- a/launch_scripts/launch/jobs_analysis_bggen.config
+++ b/launch_scripts/launch/jobs_analysis_bggen.config
@@ -6,8 +6,8 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         production              # https://scicomp.jlab.org/docs/batch_job_tracks
+PROJECT                       halld                   # https://scicomp.jlab.org/scicomp/slurmJob/slurmAccount
+TRACK                         production              # https://scicomp.jlab.org/scicomp/slurmJob/slurmInfo
 OS                            el9
 
 # JOB RESOURCES
@@ -28,7 +28,6 @@ ENVFILE                       /home/gxproj6/env_analysis_launch_2.sh
 SCRIPTFILE                    /home/gxproj6/monitoring/launch/script.sh
 #RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
 JANA_CONFIG                   /home/gxproj6/monitoring/launch/jana_analysis_n3pi.config
-CACHE_PIN_DAYS                0                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
 INDATA_TOPDIR     /cache/halld/gluex_simulations/REQUESTED_MC/2017_bggen_p4_20190609012010pm/hddm/
