update incoming monitoring as well

--- a/launch_scripts/incoming/jobs_incoming.config
+++ b/launch_scripts/incoming/jobs_incoming.config
@@ -6,9 +6,9 @@
 # For files & directories: Must specify full path
 
 # SCICOMP JOB ACCOUNTING
-PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         reconstruction        # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos7
+PROJECT                       halld                 # http://scicomp.jlab.org/scicomp/#/projects
+TRACK                         production            # https://scicomp.jlab.org/docs/batch_job_tracks
+OS                            el9
 
 # JOB RESOURCES
 NCORES                        24
@@ -18,7 +18,7 @@ TIMELIMIT                     10hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
-RUNPERIOD                     2018-01 #KEEP THIS EXACT FORMAT
+RUNPERIOD                     2025-01 #KEEP THIS EXACT FORMAT
 VERSION                       01
 #BATCH                         01
 WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION] #KEEP THIS EXACT FORMAT
@@ -31,8 +31,9 @@ JANA_CONFIG                   /home/gxproj1/monitoring/incoming/jana_incoming.co
 CACHE_PIN_DAYS                20                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/rawdata/
+INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FOR SMALL, MONITORING LAUNCHES
 OUTDIR_LARGE      /cache/halld/offline_monitoring/RunPeriod-[RUNPERIOD]/ver[VERSION]     # REST, skims, hists, trees
-OUTDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/mon_ver[VERSION]        # log files, IDXA
+#OUTDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/mon_ver[VERSION]        # log files, IDXA
+OUTDIR_SMALL      /farm_out/gxproj1/data_monitoring/RunPeriod-[RUNPERIOD]/mon_ver[VERSION]        # log files, IDXA
