--- a/dirc/alignment/config.cfg
+++ b/dirc/alignment/config.cfg
@@ -6,23 +6,12 @@ OUTPUT  = DIRC_HDDS.xml
 
 #Optical Box South
 [OBCS]
-#overall rotation in X,Y and Z
-OBCS_rot = 0.,1.,0.
+MRAS_rot = 0.,1.,0.
 
-#overall offset
-OBCS_offset = 0.,-0.5,0.
-
-#three-segment mirror rotation angles
-TSM1_rot = 0.,1.,0.
-TSM2_rot = 0.,-1.,0.
-TSM3_rot = 0.,1.,0.
+MRAS_offset = 0.,-0.5,0.
 
 #Optical Box North
 [OBCN]
-OBCN_rot = 0.,0.,0.
+MRAN_rot = 0.,0.,0.
 
-OBCN_offset = 0., 0., 0.
-
-TSM1_rot = 0.,0.,0.
-TSM2_rot = 0.,0.,0.
-TSM3_rot = 0.,0.,0.
+MRAN_offset = 0., 0., 0.
