--- a/launch_scripts/incoming/jana_incoming.config
+++ b/launch_scripts/incoming/jana_incoming.config
@@ -1,6 +1,6 @@
-PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_clusters,TAGM_TW,BCAL_online,FCAL_online,CCAL_online,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,RF_online,L1_online,FCAL_invmass,pedestal_online,TAGM_online,lowlevel_online,BCAL_TDC_Timing,BCAL_attenlength_gainratio,CDC_online,CDC_Efficiency,CDC_drift,CDC_expert_2,CDC_amp,CDC_roc_hits,FDC_online,FDC_Efficiency,DIRC_online,BCAL_LED,ST_online_lowlevel,ST_online_tracking,ST_online_Tresolution
+PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_clusters,TAGM_TW,BEAM_online,BCAL_online,FCAL_online,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,RF_online,L1_online,FCAL_invmass,pedestal_online,TAGM_online,lowlevel_online,BCAL_TDC_Timing,CDC_online,CDC_Efficiency,CDC_drift,CDC_expert_2,CDC_amp,CDC_roc_hits,CDC_TimeToDistance,FDC_online,FDC_Efficiency,BCAL_LED,fa125_itrig,lumi_mon,CDC_dedx,TrackingPulls,ST_online_lowlevel,ST_online_tracking,ST_online_Tresolution,DIRC_online,TRD_online
 
-#,TRD_online,TRD_hists
+#TRD_hists
 
 #,ST_online_efficiency
 
@@ -9,10 +9,10 @@ PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
 
-#EVENTS_TO_KEEP 100000
+# jana:global_loglevel FATAL
+# jana:nevents 10000
 
 REST:DATAVERSIONSTRING offmon_RunPeriod-2025-01_ver01
-#JANA_CALIB_CONTEXT variation=default
 #jana:calib_context
 
 # For DIRC in Spring 2019
