--- a/launch_scripts/incoming/jobs_incoming.config
+++ b/launch_scripts/incoming/jobs_incoming.config
@@ -31,7 +31,7 @@ JANA_CONFIG                   /home/gxproj1/hd_utilities/launch_scripts/incoming
 CACHE_PIN_DAYS                20                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
+INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FOR SMALL, MONITORING LAUNCHES
 OUTDIR_LARGE      /cache/halld/offline_monitoring/RunPeriod-[RUNPERIOD]/ver[VERSION]     # REST, skims, hists, trees
